--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "passport-facebook": "^3.0.0",
     "passport-github2": "^0.1.11",
     "passport-google-oauth20": "^2.0.0",
+    "passport-instagram": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4"
   },
